--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./css/styles.css">
+	<script src="less.js"></script>
 </head>
 <body>
 	<div id="header">
